# wenxh_flash_attn_rocm

./: .gitignore  0-rebuild-fmha_api.sh  README.md  setup.py
csrc/: CMakeLists.txt  fmha_api.cpp
csrc/src/: fmha_dgrad_fp16_bf16_kernel.gfx90a.cpp  fmha_fprop_fp16_bf16_kernel.gfx90a.cpp  fmha_utils.h
flash_attn_rocm/: flash_attention.py  test_rocm.py
